--- a/app/views/cleaners/new.html.erb
+++ b/app/views/cleaners/new.html.erb
@@ -1,2 +1,2 @@
 <h1>New cleaner</h1>
-<%= render partial: 'form', locals: { client: @cleaner } %>
+<%= render partial: 'form', locals: { cleaner: @cleaner } %>
