--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -4,7 +4,7 @@
       <li><%= link_to "Home", root_path %></li> 
     <% if customer_signed_in? %>
       <li><%= link_to "Cleaners", cleaners_path %></li>
-      <li><%= link_to "Locations", cities_path %></li>
+      <li><%= link_to "Cities", cities_path %></li>
       <li><%= link_to "Bookings",bookings_path %></li>
     <% end %> 
     </ul>
