--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -28,5 +28,13 @@
 </p>
 <%= yield %>
 
+
+<script type="text/javascript">
+   $('.datepicker').datepicker({
+       weekStart:1,
+       color: 'red'
+   });
+  </script>
+
 </body>
 </html>
